--- a/Frontend/tsconfig.json
+++ b/Frontend/tsconfig.json
@@ -4,7 +4,7 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["Frontend/src/*"]
     },
     "noImplicitAny": false,
     "noUnusedParameters": false,
