--- a/Backend/package.json
+++ b/Backend/package.json
@@ -8,6 +8,7 @@
     "test": "echo \"No tests yet...\""
   },
   "dependencies": {
+    "@azure/communication-email": "^1.0.0",
     "@azure/functions": "^4.8.0",
     "@azure/identity": "^4.12.0",
     "@azure/storage-blob": "^12.28.0",
