--- a/Backend/package.json
+++ b/Backend/package.json
@@ -14,6 +14,7 @@
     "@azure/identity": "^4.12.0",
     "@azure/storage-blob": "^12.28.0",
     "@azure/storage-queue": "^12.27.0",
+    "durable-functions": "^3.2.0",
     "mssql": "^11.0.1"
   },
   "devDependencies": {
